--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html --open",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html",
+    "doc": "./node_modules/.bin/jsdoc -c ./jsdoc.json"
   },
   "dependencies": {
     "lodash": "4.17.15",
@@ -14,7 +15,10 @@
   },
   "devDependencies": {
     "@babel/core": "7.2.0",
+    "jsdoc": "~3.6.6",
     "parcel-bundler": "^1.6.1"
   },
-  "keywords": ["tree"]
+  "keywords": [
+    "tree"
+  ]
 }
