--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
   "name": "elementree",
   "description": "a simple tree object",
-  "version": "0.2.0",
+  "version": "0.7.0",
   "repository": "mrose/elemenTree/",
   "keywords": [
     "tree"
   ],
-  "main": "index.js",
+  "main": "dist/elementree.cjs.js",
+  "module": "dist/elementree.esm.js",
+  "browser": "dist/elementree.umd.js",
   "files": [
-    "index.js"
+    "dist"
   ],
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.10",
+    "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.0.0",
     "babel-jest": "^26.6.3",
     "jest": "^26.6.3",
     "jsdoc-to-markdown": "^6.0.1",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "rollup": "^2.34.2"
   },
   "scripts": {
-    "dev": "parcel src/index.js",
-    "build": "parcel build index.js",
-    "test": "jest --config ./jest.json",
-    "jsdoc2md": "jsdoc2md --files src/tree.js > doc/api.md"
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
+    "jsdoc2md": "jsdoc2md --files src/tree.js > doc/api.md",
+    "pretest": "npm run build",
+    "test": "jest --config ./jest.json"
   }
 }
