--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "elementree",
+  "version": "0.7.1",
   "description": "a simple tree object",
-  "repository": "mrose/elemenTree/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mrose/elementree.git"
+  },
   "keywords": [
     "tree"
   ],
   "license": "MIT",
-  "version": "0.7.0",
   "main": "dist/elementree.cjs.js",
   "module": "dist/elementree.esm.js",
   "browser": "dist/elementree.umd.js",
@@ -23,10 +26,11 @@
     "jest": "^26.6.3",
     "jsdoc-to-markdown": "^6.0.1",
     "lodash": "^4.17.20",
-    "rollup": "^2.34.2"
+    "rollup": "^2.34.2",
+    "shx": "^0.3.3"
   },
   "scripts": {
-    "build": "rollup -c",
+    "build": "shx rm -rf dist && git rev-parse HEAD > .commithash && rollup -c",
     "dev": "rollup -c -w",
     "jsdoc2md": "jsdoc2md --files src/tree.js > doc/api.md",
     "pretest": "npm run build",
